added bootstrap css

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 		<title>Title Goes Here</title>
 
 		<script type="text/javascript" src="index.js"></script>
+		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 	</head>
 
 	<body>
