--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,71 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
+<!DOCTYPE html>
 <html lang="en" ng-app="ActivityReport">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		<title>Title Goes Here</title>
 
-		<script type="text/javascript" src="index.js"></script>
-		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-	</head>
+<head>
 
-	<body>
-        <div ng-view>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Simple Sidebar - Start Bootstrap Template</title>
+
+
+    <link href="assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+    <link href="assets/css/simple-sidebar.css" rel="stylesheet">
+
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="assets/vendor/jQuery/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/bootstrap/js/bootstrap.js"></script>
+
+</head>
+
+<body>
+
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Activity Reports
+                    </a>
+                </li>
+                <li>
+                    <a href="#/">Dashboard</a>
+                </li>
+                <li>
+                    <a href="#/report_list">Report List</a>
+                </li>
+                <li>
+                    <a href="#/create_report">Create Report</a>
+                </li>
+				<li>
+					<a href="#">Logout</a>
+				</li>
+            </ul>
         </div>
-	</body>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                    	<div ng-view>
+						</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
+</body>
+
 </html>
-
-
