--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,12 @@
     <link href="assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <link href="assets/css/simple-sidebar.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="assets/vendor/jQuery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="assets/vendor/bootstrap/js/bootstrap.js"></script>
+
 
 </head>
 
