--- a/app/directives/TwkCalendarInput.html
+++ b/app/directives/TwkCalendarInput.html
@@ -1,3 +1,4 @@
 <div class="input-group date col-sm-8">
-    <input type="text" class="form-control" /><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+	<input type="text" class="form-control"/><span class="input-group-addon"><i
+		class="glyphicon glyphicon-calendar"></i></span>
 </div>
